new_isa_tests/test_fsqrt/test_fsqrt.asm.err
mcode_instruction
mcode_set_instruction
mcode_instruction
mcode_set_instruction
mcode_instruction
mcode_arithmetic_instruction
mcode_alu_instruction
mcode_instruction
mcode_arithmetic_instruction
mcode_alu_instruction
mcode_instruction
mcode_instruction
mcode_instruction
mcode_instruction
mcode_instruction
mcode_call_instruction
mcode_instruction
mcode_instruction
mcode_instruction
mcode_instruction
mcode_mem_access_instruction
mcode_store_instruction
mcode_instruction
mcode_instruction
mcode_instruction
mcode_instruction
mcode_instruction
mcode_instruction
mcode_instruction
mcode_instruction
mcode_instruction
mcode_instruction
mcode_instruction
mcode_instruction
mcode_arithmetic_instruction
mcode_alu_instruction
mcode_instruction
mcode_set_instruction
mcode_instruction
mcode_instruction
mcode_instruction
mcode_mem_access_instruction
mcode_store_instruction
mcode_instruction
mcode_instruction
mcode_instruction
mcode_instruction
mcode_arithmetic_instruction
mcode_alu_instruction
mcode_instruction
mcode_arithmetic_instruction
mcode_fsqrt_instruction 
test_fsqrt.aligned.mcode:59:15: unexpected char: 0x02
test_fsqrt.aligned.mcode:59:22: unexpected char: '$'
Parsing Exception: test_fsqrt.aligned.mcode:59:23: unexpected token: i0
test_fsqrt.aligned.mcode:59:30: unexpected char: 0x02
Parsing Exception: test_fsqrt.aligned.mcode:60:25: expecting RUINTEGER, found '('
mcode_instruction
mcode_arithmetic_instruction
mcode_vreduce_instruction
Parsing Exception: test_fsqrt.aligned.mcode:60:46: expecting LPAREN, found '9'
Parsing Exception: test_fsqrt.aligned.mcode:61:25: expecting SEMICOLON, found '('
mcode_instruction
mcode_arithmetic_instruction
mcode_alu_instruction
mcode_instruction
mcode_arithmetic_instruction
mcode_fsqrt_instruction 
test_fsqrt.aligned.mcode:69:15: unexpected char: 0x04
test_fsqrt.aligned.mcode:69:22: unexpected char: '$'
Parsing Exception: test_fsqrt.aligned.mcode:69:23: unexpected token: i0
test_fsqrt.aligned.mcode:69:30: unexpected char: 0x04
Parsing Exception: test_fsqrt.aligned.mcode:70:25: expecting RUINTEGER, found '('
mcode_instruction
mcode_arithmetic_instruction
mcode_vreduce_instruction
Parsing Exception: test_fsqrt.aligned.mcode:70:47: expecting LPAREN, found '-16'
Parsing Exception: test_fsqrt.aligned.mcode:72:20: expecting RUINTEGER, found '['
mcode_instruction
mcode_arithmetic_instruction
mcode_vreduce_instruction
Parsing Exception: test_fsqrt.aligned.mcode:72:26: expecting LPAREN, found '+'
mcode_instruction
mcode_instruction
mcode_instruction
Error: Register 4 multiply written in bundle 97
mcode_instruction
mcode_arithmetic_instruction
mcode_alu_instruction
mcode_instruction
mcode_instruction
mcode_instruction
mcode_instruction
mcode_mem_access_instruction
mcode_store_instruction
mcode_instruction
mcode_instruction
mcode_instruction
mcode_instruction
mcode_arithmetic_instruction
mcode_alu_instruction
mcode_instruction
mcode_instruction
mcode_instruction
mcode_instruction
mcode_mem_access_instruction
mcode_load_instruction
mcode_instruction
mcode_instruction
mcode_instruction
mcode_instruction
mcode_instruction
mcode_instruction
mcode_instruction
mcode_instruction
mcode_mem_access_instruction
mcode_load_instruction
mcode_instruction
mcode_instruction
mcode_instruction
mcode_instruction
mcode_arithmetic_instruction
mcode_alu_instruction
mcode_instruction
mcode_cast_instruction
mcode_instruction
mcode_arithmetic_instruction
mcode_alu_instruction
mcode_instruction
mcode_instruction
mcode_mem_access_instruction
mcode_store_instruction
mcode_instruction
mcode_instruction
mcode_instruction
mcode_instruction
mcode_branch_instruction
mcode_instruction
mcode_cast_instruction
mcode_instruction
mcode_arithmetic_instruction
mcode_alu_instruction
mcode_instruction
mcode_instruction
mcode_mem_access_instruction
mcode_load_instruction
mcode_instruction
mcode_instruction
mcode_instruction
mcode_instruction
mcode_arithmetic_instruction
mcode_alu_instruction
mcode_instruction
mcode_instruction
mcode_instruction
mcode_instruction
mcode_instruction
mcode_instruction
mcode_instruction
mcode_instruction
mcode_return_instruction
mcode_instruction
mcode_instruction
mcode_instruction
mcode_instruction
mcode_mem_access_instruction
mcode_load_instruction
mcode_instruction
mcode_instruction
mcode_instruction
Info: finished parsing file test_fsqrt.aligned.mcode
Info:  Bundle id=0 addr=0 pad amount 0
Info:  Bundle id=1 addr=2 pad amount 0
Info:  Bundle id=2 addr=4 pad amount 0
Info:  Bundle id=3 addr=8 pad amount 0
Info:  Bundle id=4 addr=10 pad amount 0
Info:  Bundle id=5 addr=11 pad amount 0
Info:  Bundle id=6 addr=12 pad amount 0
Info:  Bundle id=7 addr=14 pad amount 0
Info:  Bundle id=8 addr=18 pad amount 0
mcode_assemble: src/McodeBundle.cpp:222: int McodeInstructionBundle::Calculate_Pad_For_Alignment(uint32_t): Assertion `0' failed.
