new_isa_tests/test_fsqrt/test_fsqrt.aligned.mcode
apara_start:
    || 
    $set     $r28    0    1024
    $set     $r27    0    32760
    ;
    || 
    +            $r26    ($i64)    $r0    $r27
    +            $r30    ($i64)    $r0        0
    ;
pad_4__0:
    || 
    $null
    $null
    $null
    $null
    ;
    || 
    $call    main
    $null
    $null
    $null
    $st   ($i32)   [$r28  + 0]    $r30
    $null
    $null
    $null
    ;
    || 
    $halt
    ;
pad_1__2:
    || 
    $null
    ;
pad_2__4:
    || 
    $null
    $null
    ;
pad_4__6:
    || 
    $null
    $null
    $null
    $null
    ;
main:
    || 
    +            $r26    ($i64)    $r0    $r27
    $set     $r1    0    824
    $null
    $null
    $st   ($i64)   [$r27  + 0]    $r26
    $null
    $null
    $null
    ;
    || 
    -            $r27    ($i64)    $r27    $r1
    $fsqrt         ($i0)    
    +            $r2    ($i64)    $r0        9
    +            $r2    ($i64)    $r26        -8
    $null
    $null
    $null
    $null
    ;
    || 
    +            $r4    ($i64)    $r0        4
    $fsqrt         ($i0)    
    +            $r4    ($i64)    $r26        -16
    $null
    $st   ($i64)   [$r2  + 0]    $r1
    $null
    $null
    $null
    ;
    || 
    +            $r5    ($i64)    $r26        -8
    $null
    $null
    $null
    $st   ($i64)   [$r4  + 0]    $r3
    $null
    $null
    $null
    ;
    || 
    +            $r7    ($i64)    $r26        -16
    $null
    $null
    $null
    $ld    ($i64)   $r6    [$r5 + 0]
    $null
    $null
    $null
    ;
    || 
    $null
    $null
    $null
    $null
    $ld    ($i64)   $r8    [$r7 + 0]
    $null
    $null
    $null
    ;
    || 
    +            $r9    ($i64)    $r6    $r8
    $cast    ($i32)    $r10    ($i64)    $r9
    +            $r11    ($i64)    $r26        -8
    $null
    $st   ($i32)   [$r28  + 0]    $r10
    $null
    $null
    $null
    ;
    || 
    ? ($i64)  $r0 ==    $goto    main_epilogue
    $cast    ($i32)    $r13    ($i64)    $r12
    +            $r1    ($i64)    $r0    $r13
    $null
    $ld    ($i64)   $r12    [$r11 + 0]
    $null
    $null
    $null
    ;
main_epilogue:
    || 
    +            $r27    ($i64)    $r0    $r26
    ;
pad_1__8:
    || 
    $null
    ;
pad_2__10:
    || 
    $null
    $null
    ;
pad_4__12:
    || 
    $null
    $null
    $null
    $null
    ;
    || 
    $return
    $null
    $null
    $null
    $ld    ($i64)   $r26    [$r27 + 0]
    $null
    $null
    $null
    ;
